# data-extraction

./: .gitignore  README.md  cli.py  parsing_test.py  pipeline_cli.py  pyproject.toml  requirements.txt
analysis/: create_figures.py  summaries.csv
paper_extraction_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
queries/0.7.1/: base_prompt.txt  chain_of_thought_prompt.txt  query_info.json  system_prompt.txt
query_creation/: __init__.py  _coding_scheme.xlsx  base_prompt_template_mc.txt  binarization_prompt.txt  binary_base_prompt.txt  coding_scheme.xlsx  collect_item_info.py  create_prompts.py  follow_up_prompt_other.txt  get_outcome.py  prompts_to_html.py  queries_with_prompts.json  query_info.json  research_prompts.html  rewriting_prompt.txt  system_prompt.txt  system_prompt_multiple_outcomes.txt  system_prompt_single_outcome.txt
query_creation/base_prompt/: list.txt  multiple_choice.txt  numeric.txt  open_ended.txt  single_choice.txt
query_creation/base_prompt_with_reasoning/: list.txt  multiple_choice.txt  numeric.txt  open_ended.txt  single_choice.txt
query_creation/synthetic_few_shot/: list.txt  multiple_choice.txt  numeric.txt  open_ended.txt  single_choice.txt
src/: _old_objective.py  answer0.7.1.txt  answer0.7.txt  dependencies.txt  evaluate.py  first_trials.db  objective.py  registry.py  synthetic_queries.py
src/answer_generation/: answer_generator.py  filtered_models.json  get_model_info.py
src/chunking/: base_chunker.py  length_chunker.py  structure_chunker.py  text_chunker.py
src/document_parsing/: base_parser.py  grobid_parser.py  mineru_parser.py  pymupdf_parser.py  pymupdf_tesseract.py  utils.py  vlm_gemini.py  vlm_qwen.py
src/embedding/: base_embedder.py  bge_embedder.py  e5_embedder.py  openai_embedder.py
src/paper_qa_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/retrieval/: base_retriever.py  cross_encoder_retriever.py  rcs_retriever.py  token_budget_retriever.py  topk_retriever.py
src/vectorstore/: numpy_store.py
synthetic_queries/1.1/: base_prompt.txt
synthetic_queries/1.2/: few_shot_prompt.txt  system_prompt.txt
tests/: run_all_tests.py  test_rcs_rerank_results_gpt-4.1-2025-04-14.json  test_rcs_rerank_results_meta-llama_Llama-4-Scout-17B-16E-Instruct.json
tests/caching/: test_objective_caching.py
tests/chunking/: test_chunkers.py
tests/document_parsing/: _old_parser_test.py  expected_paper.json  generate_synthetic_example.py  parser_test.py
utils_langextract/: __init__.py  lang_extract_utils.py
utils_langextract/langextract_together/: pyproject.toml  test_example_provider.py
utils_langextract/langextract_together/langextract_together/: __init__.py  provider.py  schema.py
utils_langextract/langextract_together/langextract_together.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+33 files in other folders)
