[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-qa-pipeline"        
version = "0.1.0"          
description = "Example project with CLI scripts"
authors = [
    { name = "Johanna Einsiedler", email = "johanna.einsiedler@unibas.ch" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []



[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
parse = "document_parsing.parse:main"
chunk = "chunking.chunk:main"